<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu_takeno_yaobase">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="160dp"
        android:src="@drawable/bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="88dp"
        android:layout_height="66dp"
        android:src="@drawable/reiko"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="48dp" />

    <Button
        android:id="@+id/takeno_yaobase_pl_button1"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginEnd="490dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/button_play_background"
        android:text="@string/announce_1"
        android:onClick="onClick"
        android:textSize="25sp"
        android:fontFamily="@font/rodin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/takeno_yaobase_pl_button2"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/button_play_background"
        android:text="@string/announce_2"
        android:onClick="onClick"
        android:textSize="25sp"
        android:fontFamily="@font/rodin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/takeno_yaobase_pl_button3"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginStart="470dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/button_play_background"
        android:text="@string/announce_3"
        android:onClick="onClick"
        android:textSize="25sp"
        android:fontFamily="@font/rodin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/takeno_yaobase_one_back"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginEnd="588dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_back_background"
        android:onClick="onClick"
        android:text="@string/backJp"
        android:textSize="22sp"
        android:fontFamily="@font/rodin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/menu_voice"
        android:layout_width="500dp"
        android:layout_height="80dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_select_background"
        android:onClick="onClick"
        android:text="@string/announce_menu"
        android:textSize="22sp"
        android:fontFamily="@font/rodin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_takeno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="320dp"
        android:text="竹野線 冷交本社前行き"
        android:textColor="@color/black"
        android:textSize="35dp"
        android:fontFamily="@font/rodin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>