<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".takenoex_select">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="160dp"
        android:src="@drawable/bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="88dp"
        android:layout_height="66dp"
        android:src="@drawable/reiko"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="48dp" />

    <Button
        android:id="@+id/takenoexp_select_1"
        android:layout_width="310dp"
        android:layout_height="150dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="376dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/button_select_background"
        android:fontFamily="@font/rodin"
        android:onClick="onClick"
        android:text="@string/takenoex1"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/takenoexp_select_2"
        android:layout_width="310dp"
        android:layout_height="150dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/button_select_background"
        android:fontFamily="@font/rodin"
        android:onClick="onClick"
        android:text="@string/takenoex2"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/takenoexp_one_back"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginEnd="588dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_back_background"
        android:fontFamily="@font/rodin"
        android:onClick="onClick"
        android:text="@string/backJp"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_takeno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="320dp"
        android:fontFamily="@font/rodin"
        android:text="竹野線特急 経路選択"
        android:textColor="@color/black"
        android:textSize="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>